# aoc-bingo

./: CLAUDE.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: lib.rs  main.rs
backend/src/api/: game.rs  health.rs  leaderboard.rs  mod.rs
backend/src/client/: aoc.rs  mod.rs
backend/src/client/model/: leaderboard.rs
backend/src/db/: manager.rs  mod.rs  pool.rs  transaction.rs
backend/src/db/migrations/: 2025_12_06_22_12_leaderboard_cache.sql  2025_12_15_23_00_game_tables.sql
backend/src/model/: aoc.rs  game.rs  leaderboard.rs  mod.rs
backend/src/repository/: game.rs  leaderboard.rs  mod.rs
backend/src/service/: aoc_utils.rs  game.rs  leaderboard.rs  mod.rs
frontend/: .dockerignore  .env.example  Caddyfile  Dockerfile  index.html  package.json
frontend/public/: manifest.json
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/app/: layout.tsx  page.tsx  theme.tsx
frontend/src/components/: BingoFetcher.tsx  Disclaimer.tsx  Footer.tsx  Header.tsx  LeaderboardFetcher.tsx
frontend/src/contexts/: ClientContext.tsx  ClientProviders.tsx  LeaderboardContext.tsx
frontend/src/lib/: api.ts  config.ts  game.types.ts
frontend/src/routes/: __root.tsx  about.tsx  create.tsx  game.$id.tsx  games.tsx  index.tsx
frontend/src/routes/game/: $id.tsx
