[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
include_dir = "0.7.4"
reqwest = "0.12.24"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlite = "0.37.0"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
