[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.42", features=["serde"]}
include_dir = "0.7.4"
reqwest = { version = "0.12.24", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = { version = "0.6.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlite = "0.37.0"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
